# coverage_path_planning

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CoveragePathCreator.cpp  CoveragePathCreator.h  CoveragePlotHelper.cpp  CoveragePlotHelper.h  README.md  a.txt  appunti 2.txt  appunti.txt  code-review.csv  decomposer.cpp  decomposer.hpp  generatorPath.cpp  generatorPath.hpp  hole_a.txt  input.txt  main.cpp  package.xml  path_generator.cpp  path_generator.hpp  path_sede.txt  utils.cpp  utils.hpp  vsc-extensions.txt
include/: CgalPlotHelper.h  CoveragePath.h  CoveragePathCreator.h  CoveragePlotHelper.h  MyDecomposition.h  PathContouring.h  PolygonCreator.h  pathPoints.h  utils.hpp
mission/: complex.txt  hole_complex.txt  hole_complex_2.txt  hole_complex_3.txt  mission.txt
src/: CgalPlotHelper.cpp  CoveragePath.cpp  CoveragePathCreator.cpp  CoveragePlotHelper.cpp  MyDecomposition.cpp  PathContouring.cpp  PolygonCreator.cpp  main.cpp  pathPoints.cpp  runCoveragePath.cpp  utils.cpp
test/: TestGemma1.txt  a.txt  bag_1.txt  bag_16_10.txt  bag_16_19.txt  bag_16_28.txt  bag_16_36.txt  bag_16_47.txt  bag_17_00.txt  bag_17_15.txt  mydecompositiontest.txt  mydecompositiontest2.txt  mydecompositiontest3.txt  mydecompositiontest5.txt  pol1.txt  pol2.txt  pol3.txt  quadrato.txt  rettangolo.txt  sigma.txt  st.txt  test.txt  valentina.txt
